enhance data processor function

--- a/DataProcessor.ipynb
+++ b/DataProcessor.ipynb
@@ -9,7 +9,7 @@
     "from google.cloud import storage\n",
     "from google.cloud.exceptions import NotFound\n",
     "\n",
-    "class DataProcessor():\n",
+    "class GSProcessor():\n",
     "    \n",
     "    def __init__(self, bucket_name='tbrain-tsmc', destination_blob_name='data/'):\n",
     "        self.bucket_name = bucket_name\n",
@@ -22,17 +22,11 @@
     "             print(\"請聯繫Sponsor開通權限!\")\n",
     "                \n",
     "        self.bucket = self.storage_client.bucket(self.bucket_name)\n",
-    "        \n",
     "         \n",
     "    def upload_blob(self, source_file_name, destination_file_name):\n",
     "        blob = self.bucket.blob(self.destination_blob_name + destination_file_name)\n",
     "        blob.upload_from_filename(source_file_name)\n",
     "        print(\"File {} uploaded to {}.\".format(source_file_name, self.destination_blob_name))\n",
-    "        \n",
-    "    def get_blob(self, source_file_name):\n",
-    "        blob = storage.Blob(source_file_name, self.bucket)\n",
-    "        content = blob.download_as_string()\n",
-    "        return content\n",
     "        \n",
     "    def delete_file(self, source_file_name):\n",
     "        d_file = self.destination_blob_name + source_file_name\n",
@@ -44,15 +38,112 @@
     "        \n",
     "    def show_files(self,max_results_=10, prefix_='data/YUSUN.zip/YUSUN/textFiles/'):\n",
     "        all_blobs = list(self.storage_client.list_blobs(self.bucket,max_results=max_results_, prefix=prefix_))\n",
-    "        print(all_blobs)"
+    "        print(all_blobs)\n",
+    "        \n",
+    "    def get_bobs(self,max_results_=10, prefix_='data/YUSUN.zip/YUSUN/textFiles/'):\n",
+    "        all_blobs = list(self.storage_client.list_blobs(self.bucket,max_results=max_results_, prefix=prefix_))\n",
+    "        return all_blobs\n",
+    "    \n",
+    "    def get_blob(self, source_file_name):\n",
+    "        try:\n",
+    "            blob = storage.Blob(source_file_name, self.bucket)\n",
+    "            content = blob.download_as_string()\n",
+    "            return content\n",
+    "        except NotFound:\n",
+    "            return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### result format: \n",
+    "``\n",
+    "[{'news_ID': 1,\n",
+    "  'hyperlink': 'https://news.cnyes.com/news/id/4352432',\n",
+    "  'content': {'title': '量化交易追求絕對報酬 有效對抗牛熊市',\n",
+    "   'context': '近年來投資市場波動越來越明顯，追求低波動、絕對報酬的量化交易備受注目。專家表示，採用量化交易策略投資台股，不管是處於多頭或是空頭市場，績效及波動度均可領跑大盤，甚至比國內投資台股的股票型基金及 ETF 的波動率還低，表現也更為穩定。\\n大數據時代來臨，風行歐美 50 年的量化交易儼然成為顯學，台灣亦開始重視此一趨勢發展，也因此，中華機率統計學會及台北科技大學管理學院攜手主辦，並由元大期貨、...'},\n",
+    "  'name': '[]'},\n",
+    "  {...},\n",
+    "  {...}\n",
+    "  ]\n",
+    "``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "class DataProcessor(GSProcessor):\n",
+    "    \n",
+    "    def init(self, bucket_name='tbrain-tsmc', destination_blob_name='data/'):\n",
+    "        super().__init__(self, bucket_name, destination_blob_name)\n",
+    "        \n",
+    "    def combine_all_file(self, tbrainfile='assert/tbrain_train_final_0610.csv', file='assert/tbrain_train_title_context.txt'):\n",
+    "        df = pd.read_csv(tbrainfile)\n",
+    "        df_json = json.loads(df.to_json(orient='records', force_ascii=False))\n",
+    "\n",
+    "        for i in df_json:\n",
+    "            news_ID = i['news_ID']-1\n",
+    "            f = 'data/YUSUN.zip/YUSUN/textFiles/'+ str(news_ID) +'.txt'\n",
+    "            \n",
+    "            content = self.get_blob(f)\n",
+    "            i['content'] =  json.loads(content) if content is not None else json.loads('{\"title\": \"\", \"context\": \"\"}')\n",
+    "\n",
+    "        with open(file, 'w') as output:\n",
+    "            json.dump(df_json, output, ensure_ascii=False)\n",
+    "\n",
+    "    def get_all_context(self, file='training_data/tbrain_train_title_context.txt'):\n",
+    "        f = self.get_blob(file)\n",
+    "        contexts = []\n",
+    "        \n",
+    "        data = json.loads(f.decode('utf-8'))\n",
+    "        for row in data:\n",
+    "            contexts.append(row['content']['context'])\n",
+    "            \n",
+    "        return contexts\n",
+    "\n",
+    "    def get_all_title(self, file='training_data/tbrain_train_title_context.txt'):\n",
+    "        f = self.get_blob(file)\n",
+    "        titles = []\n",
+    "        \n",
+    "        data = json.loads(f.decode('utf-8'))\n",
+    "        for row in data:\n",
+    "            titles.append(row['content']['title'])\n",
+    "            \n",
+    "        return titles\n",
+    "\n",
+    "    def get_all_name(self, file='training_data/tbrain_train_title_context.txt'):\n",
+    "        f = self.get_blob(file)\n",
+    "        names = []\n",
+    "        \n",
+    "        data = json.loads(f.decode('utf-8'))\n",
+    "        for row in data:\n",
+    "            names.append(row['name'])\n",
+    "        \n",
+    "        return names\n",
+    "        \n",
+    "    def get_all(self, file='training_data/tbrain_train_title_context.txt'):\n",
+    "        f = self.get_blob(file)\n",
+    "        data = json.loads(f.decode('utf-8'))\n",
+    "   \n",
+    "        return data\n",
+    "        \n",
+    "    def preprocessing(self, s):\n",
+    "        return s.replace('\\n', '').replace('\\r', '')"
    ]
   }
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-1.m48",
+   "name": "tf2-gpu.2-1.m49",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-1:m48"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-1:m49"
   },
   "kernelspec": {
    "display_name": "Python 3",
