新增中文編碼錯亂處理方式

--- a/DataProcessor.ipynb
+++ b/DataProcessor.ipynb
@@ -41,7 +41,7 @@
     "        print(all_blobs)\n",
     "        \n",
     "    def get_bobs(self,max_results_=10, prefix_='data/YUSUN.zip/YUSUN/textFiles/'):\n",
-    "        all_blobs = list(self.storage_client.list_blobs(self.bucket,max_results=max_results_, prefix=prefix_))\n",
+    "        all_blobs = self.storage_client.list_blobs(self.bucket,max_results=max_results_, prefix=prefix_)\n",
     "        return all_blobs\n",
     "    \n",
     "    def get_blob(self, source_file_name):\n",
@@ -72,12 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
+    "import re\n",
     "\n",
     "class DataProcessor(GSProcessor):\n",
     "    \n",
@@ -122,20 +123,45 @@
     "        f = self.get_blob(file)\n",
     "        names = []\n",
     "        \n",
-    "        data = json.loads(f.decode('utf-8'))\n",
+    "        data = json.loads(f.decode('utf-8').encode('utf-8'))\n",
     "        for row in data:\n",
     "            names.append(row['name'])\n",
     "        \n",
     "        return names\n",
     "        \n",
-    "    def get_all(self, file='training_data/tbrain_train_title_context.txt'):\n",
+    "    def get_all(self, file='training_data/tbrain_train_title_context.txt', preprocessed=True):\n",
     "        f = self.get_blob(file)\n",
+    "        titles = []\n",
+    "        names = []\n",
+    "        contexts = []\n",
+    "        \n",
     "        data = json.loads(f.decode('utf-8'))\n",
-    "   \n",
-    "        return data\n",
+    "        for row in data:\n",
+    "            title = row['content']['title']\n",
+    "            context = row['content']['context']\n",
+    "            \n",
+    "            if preprocessed:\n",
+    "                title  = self.preprocessing(title)\n",
+    "                context = self.preprocessing(context)\n",
+    "                    \n",
+    "            names.append(row['name'])\n",
+    "            titles.append(title)\n",
+    "            contexts.append(context)\n",
+    "          \n",
+    "        return titles, names, contexts\n",
     "        \n",
     "    def preprocessing(self, s):\n",
-    "        return s.replace('\\n', '').replace('\\r', '')"
+    "#         移除非中文字\n",
+    "#         pattern = re.compile(r'[^\\u4e00-\\u9fa5]')\n",
+    "#         s = re.sub(pattern, '', s)\n",
+    "        try:\n",
+    "            s = s.encode('ISO-8859-1').decode('utf-8', 'ignore')\n",
+    "        except:\n",
+    "            s = s.encode('utf-8').decode('utf-8')\n",
+    "            \n",
+    "        s = s.replace('\\n', '').replace('\\r', '')\n",
+    "        \n",
+    "        return s"
    ]
   }
  ],
